--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
 				<strong>Nombre: </strong> Celia Rosario Méndez <br>
 				<strong>Ubicación: </strong> Homero 1015 Col. Polanco <br>
 				<strong>Profesión: </strong> Lic. Administración. Agente de Seguros Cédula B <br>
-				<strong>Años en este negocio: </strong> 10 años<br>
+				<strong>Años en este negocio: </strong> 12 años<br>
 				<strong>Trabajos anteriores: </strong> Grupo Nacional Provincial,
 				AARCO Agente de Seguros,
 				Seguros Monterrey New York Life,
 				AXA Seguros<br>
-				<strong>Hijos: </strong> Maximiliano 10 años<br>
-				<strong>Ciudades donde has residido: </strong> Ciudad de México y Tlalnepantla<br>
-				<strong>¿Por cuánto tiempo? </strong> Ciudad de México 20 años y Tlalnepantla 20<br>
+				<strong>Hijos: </strong> Maximiliano 12 años<br>
+				<strong>Ciudades donde has residido: </strong>Tlalnepantla<br>
+				<strong>¿Por cuánto tiempo? </strong> 21 años<br>
 				<strong>Pasatiempos: </strong> Leer, ir al cine y maratonear en Netflix<br>
 				<strong>Una de las experiencias más enriquecedoras en tu vida: </strong> Ser mamá de Maximiliano<br>
 				<strong>Metas: </strong>consolidarme mi negocio en 2 años, conocer todas las maravillas del mundo
